--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2452,7 +2452,7 @@ input, select, textarea {
 		font-size: 0.8rem;
 		font-weight: 900;
 		letter-spacing: 0.075em;
-		margin-top: 1.5rem;
+		margin-top: 15%;
 		height: 3rem;
 		line-height: 3rem;
 		padding: 0 2rem;
